MODKBEKBJ-515 - GET Titles search | change searchtype from advanced to contains
 * Changed searchtype to 'contains'